--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,13 +2,11 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Meu Site</title>
+  <title>Página Inicial</title>
 </head>
 <body>
-  <h1>Bem-vindo ao meu site!</h1>
-  <p>Escolha uma opção:</p>
-  <a href="cadastro.html">Cadastrar Usuário</a>
-  <br>
-  <a href="login.html">Fazer Login</a>
+  <h1>Bem-vindo ao site!</h1>
+  <p>Clique abaixo para fazer login ou se cadastrar:</p>
+  <a href="auth.html">Ir para Autenticação</a>
 </body>
 </html>
