--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,14 +1,47 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
   <meta charset="UTF-8">
-  <title>Bem-vindo</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles/style.css">
+  <title>Plataforma de Apoio - DS</title>
 </head>
-<body>
-  <h1>Bem-vindo à nossa plataforma!</h1>
-  <p>Já tem cadastro? <a href="login.html">Fazer login</a></p>
 
-  <p>É novo por aqui?</p>
-  <button onclick="window.location.href='cadastro.html'">Quero me inscrever</button>
+<body>
+  <header>
+    <div id="title">
+      <h1>Bem vindos a EstudoTech</h1>
+      
+    </div>
+
+    <nav>
+      <ul>
+        <li><a href="#">Início</a></li>
+        <li><a href="cadastro.html">Inscreva-se</a></li>
+        <li><a href="login.html">Login</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main>
+  
+  </main>
+
+  
 </body>
+
 </html>
+<section class="hero">
+  <div class="hero-text">
+    <h2><span>Aprenda Através de Resumos com a gente!</span></h2>
+    <p class="hero-paragraph">
+      Uma plataforma feita para estudantes do curso técnico em Desenvolvimento de Sistemas.  
+      Aqui você encontra <strong>resumos, conteúdos</strong> de Front-End, Back-End, Banco de Dados e muito mais — tudo para acelerar seus estudos e colocar o conhecimento em prática.
+    </p>
+    <a href="cadastro.html" class="btn">Explorar</a>
+  </div>
+  <div class="hero-img">
+    <img src="./images/imagem (2).png" alt="Estudante" class="perfil-img"/>
+  </div>
+</section>
